# nemogrim

./: .gitignore  1_win_run_api.bat  2_win_run_client.bat  3_run_all.bat  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_cura.bat  run_imagene.bat  run_keyframe.bat  run_video.bat
apps/cura/: README.md
apps/cura/api/: .env.example  env.example  pyproject.toml
apps/cura/api/app/: db.py  initserver.py  main.py
apps/cura/api/app/analysis/: embedding.py
apps/cura/api/app/service/: actor_service.py  component_service.py  discussion_service.py  figure_service.py  jtbd_service.py  product_service.py  tech_service.py
apps/cura/ui/: package.json
apps/cura/ui/src/: App.jsx  App.less
apps/cura/ui/src/api/: api.js
apps/cura/ui/src/components/: figure_form.jsx
apps/cura/ui/src/hooks/: useItem.js  useList.js
apps/imagene/: README.md
apps/imagene/api/: .env.example  pyproject.toml  run.bat
apps/imagene/api/app/: db.py  initserver.py  main.py  models.py  settings.py
apps/imagene/api/app/services/: create_images copy.py  create_images.py  directories.py  filter_images.py  group_crud.py  image_detail.py  images_crud.py  keywords_crud.py  search_from_prompt.py  story.py
apps/imagene/api/app/utils/: embedding.py  get_db.py  matching_dnn.py  stable_diffusion.py
apps/imagene/api/wan/: test.py
apps/imagene/ui/: .env.example  dev-instruction.md  dev-plan.md  index.html  package.json
apps/imagene/ui/src/: App.css  App.jsx  main.jsx
apps/imagene/ui/src/api/: api.js
apps/imagene/ui/src/components/: PromptGenerator.css  PromptGenerator.jsx
apps/imagene/ui/src/components/ContentArea/: ContentArea.css  ContentArea.jsx
apps/imagene/ui/src/components/CustomTagPicker/: CustomTagPicker.css  CustomTagPicker.jsx
apps/imagene/ui/src/components/FileUpload/: FileUpload.jsx
apps/imagene/ui/src/components/GenerationConfig/: GenerationConfig.css  GenerationConfig.jsx  NegativeKeywordsModal.css  NegativeKeywordsModal.jsx  ResolutionEditModal.css  ResolutionEditModal.jsx
apps/imagene/ui/src/components/GroupExplorer/: GroupExplorer.css  GroupExplorer.jsx  ImageIcon.jsx  SubGroupItem.css  SubGroupItem.jsx  ViewingMode.css  ViewingMode.jsx
apps/imagene/ui/src/components/Groups/: Groups.css  Groups.jsx
apps/imagene/ui/src/components/ImageGenModal/: ImageGenModal.css  ImageGenModal.jsx
apps/imagene/ui/src/components/ImageGenerator/: AutoGenerationModal.jsx  ImageGenerator.jsx  imageGeneration.js  total_dict.json
apps/imagene/ui/src/components/ImageStatistics/: ImageStatistics.css  ImageStatistics.jsx
apps/imagene/ui/src/components/KeywordVisualizer/: KeywordVisualizer.css  KeywordVisualizer.jsx
apps/imagene/ui/src/components/Navbar/: Navbar.css  Navbar.jsx
apps/imagene/ui/src/components/PromptInput/: PromptInput.css  PromptInput.jsx
apps/imagene/ui/src/components/SidebarPanel/: SidebarPanel.css  SidebarPanel.jsx
apps/imagene/ui/src/contexts/: ImageFilterContext.jsx
apps/imagene/ui/src/pages/: Home.css  Home.jsx
apps/imagene/ui/src/service/: prompt_generating.json  prompt_keywords.json
apps/keyframe/: README.md
apps/keyframe/api/: .env.example  pyproject.toml  run.bat
apps/keyframe/api/app/: __init__.py  db.py  main.py  settings.py
apps/keyframe/api/app/routers/: __init__.py  health.py  images.py  movies.py  scenes.py
apps/keyframe/api/app/services/: __init__.py  dialogs.py  image_generation.py  image_query.py  media_processing.py  media_queue.py  movie_import.py  movie_query.py  native_picker.ps1  playback.py  scene_models.py  scene_processing.py  scene_query.py
apps/keyframe/api/tests/: conftest.py  test_lifespan.py  test_migrations.py  test_models.py  test_settings.py
apps/keyframe/api/tests/routers/: test_movies.py
apps/keyframe/api/tests/services/: test_dialogs.py  test_image_models.py  test_images.py  test_media_processing.py  test_media_queue.py  test_movie_import.py  test_playback.py  test_scene_models.py  test_scenes.py
apps/keyframe/ui/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/keyframe/ui/src/: App.tsx  main.tsx
apps/keyframe/ui/src/api/: client.ts  images.ts  movies.ts  scenes.ts
apps/keyframe/ui/src/styles/: global.css
apps/keyframe/ui/src/test/: App.test.tsx  ImageGenerationPage.test.tsx  MovieDetailPage.test.tsx  SceneDetailPage.test.tsx  SceneExplorerPage.test.tsx  SceneVideoPlayer.test.tsx  setup.ts
apps/video/: README.md
apps/video/api/: env.example  pyproject.toml
apps/video/api/app/: db.py  initserver.py  main.py
apps/video/api/app/service/: video_service.py
apps/video/ui/: package.json  vite.config.js
apps/video/ui/src/: App.jsx
apps/video/ui/src/api/: api.js
apps/video/ui/src/components/: Navbar.jsx  VideoDetail.jsx  VideoFeed.css  VideoListPage.css  VideoListPage.jsx  VideoPlayer.jsx  VideoUpload.css  VideoUpload.jsx
apps/video_backend/: pyproject.toml
apps/video_backend/app/: db.py  init_db.py  initserver.py  main.py
apps/video_backend/app/service/: history_service.py  services.py  thumbnail_service.py  video_service.py
apps/video_frontend/: package.json
apps/video_frontend/src/: App.css  App.jsx
apps/video_frontend/src/api/: api.js
apps/video_frontend/src/components/: FavoritesPage.jsx  Navbar.css  Navbar.jsx  VideoDetail.css  VideoDetail.jsx  VideoFeed.css  VideoFeed.jsx  VideoPlayer.css  VideoPlayer.jsx  VideoUpload.css  VideoUpload.jsx
apps/wan/: pyproject.toml  requirements.txt  test.py
apps/wan/wan_lightning/: README.md  generate.py  wan_api.py
apps/wan/wan_lightning/wan/: image2video.py
apps/wan/wan_lightning/wan/modules/: attention.py  model.py  t5.py
(+33 files in other folders)
