[tool.poetry]
name = "Wan"
version = "0.0.1"
description = "Wan Test"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.4.0"
torchvision = ">=0.19.0"
opencv-python = ">=4.9.0.80"
diffusers = ">=0.31.0"
transformers = ">=4.49.0"
tokenizers = ">=0.20.3"
accelerate = ">=1.1.1"
tqdm = ">=0"
imageio  = ">=0"
easydict  = ">=0"
ftfy  = ">=0"
dashscope  = ">=0"
imageio-ffmpeg  = ">=0"
flash_attn  = ">=0"
numpy = ">=1.23.5,<2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"