[tool.poetry]
name = "imagene"
version = "0.0.1"
description = "Imagene API"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
sqlalchemy = "^2.0.41"
uvicorn = "^0.34.3"
fastapi = "^0.115.14"
pgvector = "^0.4.1"
dotenv = "^0.9.9"
psycopg = "^3.2.10"
psycopg-binary = "^3.2.10"
torch = { version = "2.7.0+cu128", source = "pytorch-gpu" }
torchvision = { version = "0.22.0+cu128", source = "pytorch-gpu" }
diffusers = "^0.35.1"
asyncpg = "^0.30.0"
sentence-transformers = "^5.1.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"