[tool.poetry]
name = "nemogrim-keyframe-api"
version = "0.1.0"
description = "Local video scene indexing API for Nemogrim Keyframe"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.14"
sqlalchemy = "^2.0.41"
uvicorn = { version = "^0.34.3", extras = ["standard"] }
torch = { version = "2.7.0+cu128", source = "pytorch-gpu" }
torchvision = { version = "0.22.0+cu128", source = "pytorch-gpu" }
timm = "^1.0.15"
huggingface-hub = "^0.33.4"
pillow = "^11.3.0"
ftfy = "^6.3.1"
regex = "^2024.11.6"
tqdm = "^4.67.1"
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
