[tool.poetry]
name = "nemogrim-keyframe-api"
version = "0.1.0"
description = "Video scene indexing API for Nemogrim Keyframe"
authors = ["Jaehak Lee <leejaehak87@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.115.14"
sqlalchemy = "^2.0.41"
uvicorn = { version = "^0.34.3", extras = ["standard"] }
pydantic-settings = "^2.10.1"
gpstation-v1-master-python-sdk = { path = "../vendor/gpstation-master-python", develop = true }

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
